environments/gloo-gateway/gateway-api/1.18/ai-gateway/chatbot/base/betterchatgpt/betterchatgpt-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: betterchatgpt-route
  namespace: ai-chatbot
  labels:
    example: chatbot-route
    gateway: http
spec:
  hostnames:
  - "chat.k8mesh.com"
  parentRefs:
    - name: http
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: betterchatgpt
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: betterchatgpt-route-policies
